src/test/ui/issue-23302-3.stderr
error[E0391]: cyclic dependency detected
  --> $DIR/issue-23302-3.rs:11:16
   |
11 | const A: i32 = B; //~ ERROR E0391
   |                ^ cyclic reference
   |
note: the cycle begins when processing `B`...
  --> $DIR/issue-23302-3.rs:13:1
   |
13 | const B: i32 = A;
   | ^^^^^^^^^^^^^^^^^
note: ...which then requires processing `A`...
  --> $DIR/issue-23302-3.rs:13:16
   |
13 | const B: i32 = A;
   |                ^
   = note: ...which then again requires processing `B`, completing the cycle.

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0391"
